# asynqrs

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  buf.gen.yaml  buf.yaml
.github/workflows/: ci.yml
asynqrs-macros/: Cargo.toml  README.md
asynqrs-macros/src/: lib.rs
docs/: EnqueueTutorial_zhCN.md  TaskAndTaskMessage_zhCN.md  WorkerDequeue_zhCN.md  alignment-gaps.md  migration.md  public-api.md  redis-smoke-matrix.md  release-readiness-roadmap.md  rust-native-runtime-redesign.md
examples/: aggregation.rs  enqueue.rs  graceful_shutdown.rs  handler_failure.rs  inspector_metadata.rs  macro_handlers.rs  middleware.rs  scheduler.rs  server.rs  typed_payload.rs
proto/: asynq.proto
scripts/: docs-set-scan.sh  feature-boundary-scan.sh  final-release-gate.sh  public-api-scan.sh  redis-smoke-preflight.sh  release-gate-shape-scan.sh  release-gate.sh  release-metadata-scan.sh  semantic-gap-scan.sh
src/: archive.rs  async_processor.rs  async_server.rs  client.rs  compat.rs  complete.rs  dequeue.rs  enqueue.rs  forward.rs  keys.rs  lease.rs  lib.rs  message.rs  operation.rs  options.rs  pb.rs  periodic.rs  processing.rs  processor.rs  recover.rs  redis_broker.rs  redis_executor.rs  redis_plan.rs  redis_scripts.rs  requeue.rs  retry.rs  scheduler.rs  server.rs  signal.rs  state.rs  task.rs
src/admin/: cancellation.rs  codec.rs  error.rs  inspector.rs  mod.rs  pagination.rs  runtime_info.rs  scheduler_info.rs  task_info.rs  tests.rs
src/admin/codec/: scheduler.rs  server.rs  time.rs  worker.rs
src/admin/inspector/: bulk.rs  metadata.rs  task_read.rs
src/aggregation/: broker.rs  error.rs  handler.rs  mod.rs  models.rs  runtime.rs  tests.rs
src/client/: constructors.rs  context.rs  error.rs  ids.rs  model.rs  runtime.rs  traits.rs
src/operation/: dequeue.rs  enqueue.rs  lifecycle.rs
src/pb/: asynq.rs  mod.rs
src/periodic/: config.rs  constructors.rs  manager.rs  provider.rs  tests.rs
src/processing/: execution.rs  executor.rs  handler.rs  lease.rs  retry.rs
src/scheduler/: broker.rs  constructors.rs  core.rs  defaults.rs  entry.rs  error.rs  handle.rs  logging.rs  options.rs  registration.rs  runtime.rs  spec.rs  state.rs  tests.rs
src/server/: accessors.rs  active_worker.rs  aggregation.rs  builder.rs  cancellation.rs  config.rs  constructors.rs  deadline.rs  defaults.rs  error.rs  health.rs  logging.rs  maintenance.rs  maintenance_broker.rs  metadata.rs  metadata_broker.rs  pending_sync.rs  processing.rs  queue.rs  reporter.rs  run.rs  runtime.rs  runtime_parts.rs  runtime_state.rs  shutdown.rs  state.rs  summary.rs  syncer.rs  test_support.rs  tests.rs  worker.rs  worker_assembly.rs  worker_assembly_config.rs  worker_assembly_test_helpers.rs  worker_broker.rs  worker_parts.rs  worker_runtime.rs
src/task/: context.rs  message.rs  mod.rs  model.rs  names.rs  queue.rs  state.rs  typed_payload.rs
tests/: redis_enqueue.rs  task_payload_derive.rs  task_payload_derive_feature_boundary.rs
tests/ui/: serve_mux_non_payload.rs  serve_mux_non_payload.stderr  task_payload_blank_task_type.rs  task_payload_blank_task_type.stderr  task_payload_duplicate_task_type.rs  task_payload_duplicate_task_type.stderr  task_payload_missing_task_type.rs  task_payload_missing_task_type.stderr  task_payload_non_string_task_type.rs  task_payload_non_string_task_type.stderr  task_payload_pass.rs  task_payload_requires_serde_feature.rs
(+452 files in other folders)
