[package]
name = "asynq-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
md-5 = "0.10"
prost = "0.13"
rand = "0.9"
redis = { version = "1.2.1", features = ["tokio-comp"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
testcontainers-modules = { version = "0.15.0", features = ["blocking", "redis"] }
