[package]
name = "asynqrs"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Rust learning reimplementation of hibiken/asynq, a Redis-backed task queue."
repository = "https://github.com/slhmy/asynq-rs"
readme = "README.md"
license = "MIT"
publish = true
exclude = [
    "/.github/",
    "AGENTS.md",
    "/scripts/",
]

[workspace]
members = ["asynqrs-macros"]

[features]
default = []
macros = ["dep:asynqrs-macros"]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
asynqrs-macros = { version = "0.2.0", path = "asynqrs-macros", optional = true }
async-trait = "0.1"
bytes = "1"
chrono = "0.4"
chrono-tz = "0.10"
cron = "0.16"
futures-util = "0.3"
hostname = "0.4"
libc = "0.2"
md-5 = "0.10"
prost = "0.13"
prost-types = "0.13"
rand = "0.9"
redis = { version = "1.2.1", features = ["cluster-async", "sentinel", "tokio-comp"] }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7"
url = "2"
uuid = { version = "1", features = ["v4"] }

[[example]]
name = "typed_payload"
path = "examples/typed_payload.rs"
required-features = ["macros", "serde"]

[[example]]
name = "macro_handlers"
path = "examples/macro_handlers.rs"
required-features = ["macros", "serde"]

[dev-dependencies]
testcontainers-modules = { version = "0.15.0", features = ["blocking", "redis"] }
trybuild = "1"
